k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mise-ai
  labels:
    name: mise-ai
